--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-
- <form action="/insert" method="post">
-      <p>ID:</p>
-      <input type="text" name="uid" />
-      <br />
+ <form action="insert" method="post">
       <p>First Name:</p>
       <input type="text" name="fname" />
       <br />
       <p>Last Name:</p>
       <input type="text" name="lname" />
       <br />
-      <p>Age:</p>
-      <input type="text" name="age" />
-      <br />
       <input type="submit" value = "Register"/>
-    </form>
-
+</form>
 </body>
 </html>
